 - API: Added "applicationDefined" to the class "Location", this property informs the GroupingHistoryRewriter that a location of a Dockable was defined by the application and that location should not be rewritten.
 - API: CPlaceholderStrategy is less aggressiv with removing invalid placeholders. Placeholders that are not matching the default scheme of how placeholders created by the framework itself look like, are now kept instead of removed.
 - API: Added new methods to CGridPerspective, CMinimizePerspective and CExternalizePerspective that allows clients to insert placeholders into the layout.
 - API: Added "PlaceholderGrouping" and an example application. "PlaceholderGrouping" allows clients to group CDockable.
 
[v1.1.2p14a]
 - API: DockableGrouping can now define the initial ExtendedMode of an invisible CDockable
 - API: PlaceholderGrouping stores a "last placeholder" at the location where a dockable that is associated with group was last seen
 
[v1.1.2p14b]
- Bugfix: ScreenDockStation no longer tries to read data that does not exist in the layout-file
- Bugfix: ScreenDockStation writes more data into the layout-file

[v1.1.2p14c]
- Bugfix: Found by Ti: reading the "area" of a CommonSingleDockable from an xml file failed, because CommonSingleDockableFactory was reading the wrong tag.
- Bugfix: the FocusHistory now also returns those Dockables that never had the focus. These Dockable are ordered by their registration. This fixes an issue where CControl was unable to focus a dockable if the user did not yet interact with the application.

[v1.1.2p14d]
- Bugfix: Glass-EclipseThemeExtension will no longer register a title as "set by the client", instead is register a title as "set by the theme". This will allow the framework to remove the title if the theme is switched.