@@ -45,6 +45,7 @@ import bibliothek.gui.dock.util.Transparency;
 import bibliothek.gui.dock.util.color.ColorCodes;
 import bibliothek.gui.dock.util.font.DockFont;
 import bibliothek.gui.dock.util.font.FontModifier;
+import bibliothek.gui.dock.util.render.DockRenderingHints;
 import bibliothek.gui.dock.util.swing.OrientedLabel;
 
 
@@ -619,6 +620,14 @@ public class FlatTab extends ConfiguredBackgroundPanel implements CombinedTab, D
      */
     public TabPlacement getOrientation(){
 		return orientation;
+	}
+    
+    @Override
+	protected void setupRenderingHints( Graphics g ) {
+		if( controller != null ){
+			DockRenderingHints renderingHints = controller.getProperties().get( DockRenderingHints.RENDERING_HINTS );
+			renderingHints.setupGraphics( g );
+		}
 	}
     
     @Override
